tests/cases/variables/errors/array-pattern-arity.ari
fn main() -> i64 {
  let values: [i64, 3] = [1, 2, 3];
  match values {
    [1, 2] => 1,
    [..] => 0,
  }
}
